--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,17 +2,17 @@
 
 - type: youtube
   icon: "fab fa-youtube"
-  url: "https://www.youtube.com/@DigitalDenCloud"
+  url: ""
   
 - type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://www.linkedin.com/in/digitalden/'  # Fill with your Linkedin homepage
+  url:  ''  # Fill with your Linkedin homepage
 
 - type: github
   icon: "fab fa-github"
 
 - title: "Contact"
-  url: "https://digitalden.cloud/#contact"
+  url: ""
   icon: "fas fa-envelope"
 
 #- type: twitter
