--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://willonsuccess/blog.github.io"
+url: "https://willonsuccess/myblog.github.io"
 
 github:
   username: willonsuccess # change to your github username
