--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://pbs.twimg.com/media/GKzmt3NXYAArc3c?format=png&name=small
+avatar: https://pbs.twimg.com/profile_images/1916790856956194817/vjKA_35y_400x400.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
