--- a/_config.yml
+++ b/_config.yml
@@ -35,14 +35,15 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Will Napolini
-  email: example@domain.com # change to your email address
+  email:  # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/willonsuccess # change to your twitter homepage
-    - https://github.com/willonsuccess # change to your github homepage
+    # - https://twitter.com/willonsuccess # change to your twitter homepage
+    # - https://github.com/willonsuccess # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
+    - https://willonsuccess.com
 
 # Site Verification Settings
 webmaster_verifications:
