--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: ru-RU
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone:
@@ -16,10 +16,17 @@ timezone:
 
 title: Will Napolini # the main title
 
-tagline: Mindset • Skillset • Toolset # it will display as the sub-title
+tagline: Мышление • Навыки • Инструменты # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Blog.
+  Уилл Наполини — автор блога о книгах по саморазвитию, психологии и продуктивности. Читайте обзоры книг, краткие конспекты и практические инсайты. Вместе разбираем лучшие книги: от классики до современных бестселлеров. Узнайте, как применять идеи из книг в жизни, бизнесе и карьере.  
+
+  В блоге вы найдете:  
+  • **Конспекты книг** — ключевые идеи за 5 минут,  
+  • **Анализ и разбор** — как применять знания на практике,  
+  • **Подборки книг** — топ по темам: лидерство, мышление, наука.  
+
+  Подпишитесь, чтобы получать лучшие идеи из нон-фикшн литературы!  
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
