--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://willonsuccess.com"
 
 github:
-  username: willonsuccess # change to your github username
+  username: willnapolini # change to your github username
 
 twitter:
   username: willonsuccess # change to your twitter username
