--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://ru.willonsuccess.com/"
 
 github:
   username: willnapolini # change to your github username
